# bitrix24-client

./: .gitignore  README.md  pyproject.toml  setup.py
bitrix24/: __init__.py  api.py  exceptions.py  utils.py
bitrix24/models/: __init__.py  base.py  category.py  chat.py  chat_history.py  contact.py  deal.py  user.py
